// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compile class name from tag 1`] = `
"import React from \\"react\\"

export default function({}) {
  return React.createElement(\\"div\\", {
    className: \\"class-name\\",
  }), React.createElement(\\"article\\", { className: \\"title is-active\\" })
}
"
`;

exports[`compile conditions 1`] = `
"import React from \\"react\\"

export default function({}) {
  return foo == \\"bar\\"
    ? React.createElement(\\"p\\", null, \` Foo is bar\`)
    : React.createElement(\\"p\\", null, \` Nope\`)
}
"
`;

exports[`compile html and components 1`] = `
"import React from \\"react\\"

export default function({ value }) {
  return React.createElement(
    \\"body\\",
    null,
    React.createElement(Header, { title: \\"hello world\\" }),
    React.createElement(
      Content,
      null,
      React.createElement(\\"section\\", { className: \\"container\\" }),
    ),
    React.createElement(Footer, { value: value }),
  )
}
"
`;

exports[`compile single tag 1`] = `
"import React from \\"react\\"

export default function({}) {
  return React.createElement(\\"div\\", null)
}
"
`;

exports[`compile text 1`] = `
"import React from \\"react\\"

export default function({}) {
  return React.createElement(
    \\"p\\",
    null,
    \` hello world\`,
    \`!\`,
  ), React.createElement(
    \\"p\\",
    null,
    \`  here goes a long
  block of text
\`,
  ), React.createElement(
    \\"div\\",
    null,
    React.createElement(\\"text\\", null, \` Also a text\`),
  )
}
"
`;
